[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Adicione aqui as dependências necessárias para o seu projeto
request = "0.0.8"

[build-dependencies]
# Adicione aqui as dependências necessárias para a compilação do seu projeto

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

